# eos-codecs-manager

./: 50-eos-chromium-codecs-update-nm  50-eos-gstreamer-codecs-update-nm  Makefile.am  README.md  chromium-codecs-x86_64.lkgv  configure.ac  eos-chromium-codecs-update  eos-codecs-activate  eos-codecs-install-key  eos-gstreamer-codecs-update  eos-gstreamer-codecs-update-nm  eos-gstreamer-codecs-update.service.in  eos-relocate-codecs  eos-relocate-codecs.service.in  eos-relocate-gst-plugins  eos-relocate-gst-plugins.service.in
data/: Makefile.am  eos-chromium-codecs-update.service.in  eos-codecs-activate.service.in  eos-codecs-install-key.desktop.in
debian/: changelog  control  copyright  eos-codecs-manager.install  postinst
src/: Makefile.am  eos-gst-codec-install.c
