NULL=

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

pkglibexec_PROGRAMS =  \
	eos-gst-codec-install \
	$(NULL)

eos_gst_codec_install_SOURCES =  \
	eos-gst-codec-install.c \
	$(NULL)

eos_gst_codec_install_LDADD =  \
	$(GST_CODEC_INSTALLER_LIBS) \
	$(NULL)

eos_gst_codec_install_CFLAGS =  \
	$(GST_CODEC_INSTALLER_CFLAGS) \
	$(NULL)
